--- a/views/hello.handlebars
+++ b/views/hello.handlebars
@@ -18,6 +18,10 @@
     <![endif]-->        
 </head>
 
+<body> 
+	<h1>Presenting: {{userName}} </h1>
+</body>
+
 <body>
 	<div class="container">
 		<div class="jumbotron">
